# imagep

./: .gitignore  .pre-commit-config.yaml  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/instructions/: python.instructions.md
imagep/: annotations.py  create_sample_images.py  icons.py  layers.py  main.py  preferences.py  preferences_dialog.py  viewer.py
imagep/deepzoom/: generation.py  image.py
tests/: test_layer.py  test_preferences.py
utility/: icon_converter.py
